--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "private": true,
   "authors": "Ross Salge & Pete Givens",
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "eslint-config-concierge-auctions-react": "^0.0.7",
+    "eslint-config-google": "^0.9.1",
     "jest-expo": "25.0.0",
     "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
@@ -20,6 +29,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-concierge-auctions-base": "^0.0.6",
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
