--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^4.18.2",
     "eslint-config-concierge-auctions-base": "^0.0.6",
     "expo": "^25.0.0",
+    "native-base": "^2.3.10",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0"
